      wrong-length \code{row.names}.  It warned for almost six years, with
      \dQuote{Will be an error!}.

      \item \code{sessionInfo()} now also contains \code{La_version()} and
      reports codepage and timezone when relevant, in both \code{print()}
      and \code{toLatex()} methods which also get new option \code{tzone}
      for displaying timezone information when \code{locale=FALSE}.

      \item New function \code{R_compiled_by()} reports the C and
      Fortran compilers used to build \R, if known.

      \item \code{predict(<lm>, newdata=*)} no longer unnecessarily creates
      an \code{offset} of all \code{0}s.
    }
  }

  \subsection{DATES and TIMES}{
      \itemize{
      \item On platforms where (non-UTC) datetimes before 1902 (or
      before 1900 as with system functions on recent macOS) are guessed
      by extrapolating time zones from 1902-2037, there is a warning at
      the first use of extrapolation in a session.  (As all time zones
      post 2037 are extrapolation, we do not warn on those.)

      \item (Platforms using \option{--with-internal-tzone}, including
      Windows and by default macOS). How years are printed in dates or
      date-times can be controlled by environment variable
      \env{R_PAD_YEARS_BY_ZERO}.  The default remains to pad to 4 digits
      by zeroes, but setting value \samp{no} gives no padding (as used
      by default by \code{glibc}).

      \item \code{strftime()} tries harder to determine the offset for
      the \code{"\%z"} format, and succeeds on the mainstream \R platforms.

      \item \code{strftime()} has a limit of 2048 bytes on the string
      produced -- attempting to exceed this is an error.  (Previously it
      silently truncated at 255 bytes.)

      \item \code{sessionInfo()} records (and by default prints) the
      system time zone as part of the locale information.  Also, the
      source (system/internal) of the date-time conversion and printing
      functions.
